--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
      <!--End section design-->
      <section class="end">
         <div class="last-next">
-            <p>Copyright 2023 by Aman Kumar All Rights Reserved.</p>
+            <p>Copyright 2023 by Aman Mulani Reserved.</p>
         </div>
 
         <div class="top">
